--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,9 @@ spring:
     username: postgres
     password: tawkenskiy
     driver-class-name: org.postgresql.Driver
+
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
